- Refactor: Prepare code to allow mixing of different academic period types on same degree curricular plan (contexts and curricular rules validity are now always evaluated for execution year)

28.7.0 (19-03-2020)
- Refactor: PrecedentDegreeInformation split into 'completed' and 'previous'  
- Fix: Deletion of AcademicCalendarEntries connected to ExecutionIntervals

28.6.0 (18-03-2020)
- Improvement: added support for AcademicPeriod type Other

28.5.1 (12-03-2020)
- Improvement: Removed unused dependency of jaxws-rs api

28.5.0 (12-03-2020)
- New feature: Support for Java 11

28.4.0 (10-03-2020)
- Fix: ExecutionInterval method overloading dispatching 

28.3.0 (10-03-2020)
- Refactor: Removed deprecated relation between PrecedentDegreeInformation and Registration

28.2.0 (04-03-2020)
- Refactor: Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData

28.1.0 (02-03-2020)
- Refactor: Unused PrecedentDegreeInformation slots cleanup
- Improvement: Added AcademicalInstitutionType to PrecedentDegreeInformation

28.0.0 (24-02-2020)
- Refactor: Deprecated fixed state machines workflow cleanup (candidacies and registration states)

27.0.0 (20-02-2020)
- Refactor: Rename GradeScale relations to refer GradeScale entity instead of GradeScaleEnum

26.3.0 (19-02-2020)
- Refactor: Added methods for find ExecutionInterval chids, aggregators and calendars
- New Fixture: Model for grade scales as domain entities

26.2.4 (13-02-2020)
- Fix: Removed the check rules when a student statute is deleted
- Improvement: Added more information to user when a degree module has more than one credits limit for executionYear

26.2.3 (07-02-2020)
- Fix: Added  null slot check for first time candidacies

26.2.2 (07-02-2020)
- Refactor: New Registrations should create StudentCandidacy instances

26.2.1 (06-02-2020)
- Bug Fix: Enrolment evaluation should always return execution interval

26.2.0 (06-02-2020)